01/07/2016

Added:
	some factions and subfactions lack medics and engineers (http://dev.withsix.com/issues/70799)
	possibility to deactivate mines and hide corpses (missed) to saboteurs and some soldiers of special forces
	possibility to switch seat between all seats of UH60M helicopter

Changed:
	reverted and updated CIT #28047 bug fix
	reverted CCP #71037 bug fix to original state
	deleted CCP #71142 bug fix due to it's faulty
	deleted unnecessary fire mode (@ 2600 SPM) of GSh302K cannon
	forbade to repair vehicles by saboteurs and sappers
	hit value of pistol and some cannon bullets
	inventory picture of OG7 launcher magazine
	rate of fire of some cannons
	reverted vision modes of Laserdesignator to original

Fixed:
	CfgWeapons - config references missing sound files (http://dev.withsix.com/issues/22990)
	PMC armored SUV's wheels are too strong (http://dev.withsix.com/issues/23501)
	CfgVehicles - irScanXXX issues (http://dev.withsix.com/issues/24913)
	unable to switch seats in Chinook (http://dev.withsix.com/issues/25026)
	accuracy value issues with civilian units (http://dev.withsix.com/issues/27790)
	accuracy value issues with military infantry units (http://dev.withsix.com/issues/27791)
	accuracy value issues with military special infantry units (http://dev.withsix.com/issues/27792)
	accuracy value issues with Wheeled_APC units (http://dev.withsix.com/issues/27793)
	accuracy value issues with tank units (http://dev.withsix.com/issues/27794)
	long magazine reload times on Tunguska (http://dev.withsix.com/issues/65710)
	HMMWV windshield is practically unbreakable (http://dev.withsix.com/issues/66995)
	7.62mm muzzle velocities are incorrect - too fast (http://dev.withsix.com/issues/71262)
	SCAR_L_STD_Mk4CQT descriptionShort error (http://dev.withsix.com/issues/72718)
	broken IR laser of M4A1_RCO_GL rifle
	cost of some engineers
	incompatibility of FN_FAL and M14_EP1 rifles with JSRS mod
	some localization mistakes
	some other issues


01/03/2016

Added: