@@ -1,9 +1,10 @@
 Added:
 	light versions of US_Delta_Force_TL_EP1, US_Soldier_Crew_EP1 and US_Soldier_MG_EP1
 	possibility to deactivate mines and hide corpses (missed) to saboteurs and some soldiers of special forces
+	possibility to repair vehicles to soldiers of special forces
 
 Changed:
-	forbade to repair vehicles by saboteurs and sappers
+	forbade to repair vehicles by Ins_Soldier_Sapper
 
 Fixed:
 	cost of some engineers
